fixme-k8s/minikube/0-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fixme-frontend
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: fixme-frontend
  ports:
  - name: frontend
    port: 80
    targetPort: frontend
    protocol: TCP
